# skia-canvas-pyr

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
skia_canvas_pyr/: __init__.py  skia_canvas_pyr.pyi  urls.py
skia_canvas_pyr/classes/: canvas.py  context.py  css.py  event_emitter.py  geometry.py  geometry.pyi  gui.py  imagery.py  path.py  sc_type.py  typography.py
src/: canvas.rs  font_library.rs  gradient.rs  image.rs  lib.rs  path.rs  pattern.rs  texture.rs  typography.rs  utils.rs
src/context/: api.rs  mod.rs  page.rs
src/gpu/: metal.rs  mod.rs
src/gpu/vulkan/: engine.rs  mod.rs  renderer.rs
src/gui/: app.rs  mod.rs
tests/: pretest.py  visual_tests_js2py.py
tests/suite/: test_canvas.py  test_context2d.py  test_media.py  test_path2d.py
tests/visual/: index.py  tests.py
