[package]
name = "skia-canvas-pyr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skia_canvas_pyr"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[features]
freetype = ["skia-safe/embed-freetype", "skia-safe/freetype-woff2"]
metal = ["skia-safe/metal", "dep:metal", "dep:raw-window-handle", "dep:raw-window-metal", "dep:core-graphics-types", "dep:cocoa", "dep:objc"]
vulkan = ["skia-safe/vulkan", "winit/rwh_05", "dep:ash", "dep:vulkano"]
window = ["dep:winit", "dep:spin_sleep"]

[dependencies]
pyo3 = "0.28.2"
crc = "^3.0"
css-color = "^0.2"
rayon = "^1.5"
crossbeam = "0.8.2"
once_cell = "1.13"
little_exif = "0.6.8"
dashmap = "6.1.0"
process_path = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
allsorts = { version = "0.15", features = ["flate2_zlib"], default-features = false}
skia-safe = { version = "0.89.1", features = ["textlayout", "webp", "svg"] }

# vulkan
ash = { version = "0.37.3", optional = true }
vulkano = { version = "0.34.1", optional = true }

# metal
metal = { version = "0.29", optional = true }
raw-window-handle = { version = "0.6", optional = true }
raw-window-metal = { version = "1.0.0", optional = true }
core-graphics-types = { version = "0.1.1", optional = true }
cocoa = { version = "0.26.0", optional = true }
objc = { version = "0.2.7", optional = true }

# window
winit = { version = '0.30.12', features = ["serde"], optional = true }
spin_sleep = {version = "1.2.1", optional = true }
