[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "skia-canvas-pyr"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "pytest>=9.0.2",
]

[tool.maturin]
profile = "dev"
editable-profile = "dev"
features = ["vulkan", "window", "freetype"]
include = ["fonts"]
